<resources>
    <string name="app_name">Safai Mitra</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="field_required">This field required</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_phone">Phone number is not valid</string>
    <string name="phone">Phone</string>
    <string name="payment">Payment</string>
    <string name="worker">Worker</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="complain">Complain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_data_file">MyData</string>
    <string name="data_file_json_key">JSONDATA</string>
    <string name="required">Required</string>
    <string name="month">Month</string>
    <string name="paid">Paid</string>
    <string name="time">Time</string>
    <string name="unPaid">UnPaid</string>
    <string name="desc">Description about complain…</string>
    <string name="complain_title">Complain Title</string>
    <string name="no_complain">No Complain</string>
    <string name="image">User Image</string>
    <string name="house_image">House Image</string>
    <string name="large_image">Large House Image</string>
    <string name="normal_view">Normal View</string>
    <string name="satellite_view">Satellite View</string>
    <string name="showPath">Show Path</string>
    <string name="profile_name_label">Name :-</string>
    <string name="profile_email_label">Email :-</string>
    <string name="profile_type_label">Type :-</string>
    <string name="profile_subType_label">SubType :-</string>
    <string name="profile_address_label">Address :-</string>
    <string name="get_current_location">Get Current Location</string>
</resources>
