<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lyt_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout android:id="@+id/payment_status_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:id="@+id/payment_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:layout_margin="@dimen/activity_horizontal_margin"/>

            <TextView android:id="@+id/payment_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paid"
                android:layout_centerHorizontal="true"/>

            <TextView android:id="@+id/payment_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:layout_below="@+id/payment_status"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>