<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.suliteos.towaso.user.ProfileFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_label_name"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:text="@string/profile_name_label"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_label_email"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_label_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:text="@string/profile_email_label" />

    <TextView
        android:text="@string/profile_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_label_type"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_label_email"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:text="@string/profile_subType_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_label_subType"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_label_type"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:text="@string/profile_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_label_address"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_label_subType"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/profile_address"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toTopOf="@+id/profile_label_address"
        app:layout_constraintLeft_toRightOf="@+id/profile_label_address"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        tools:text="Ward No. 02, Chas,Jharkhand" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_subType"
        app:layout_constraintLeft_toLeftOf="@+id/profile_address"
        app:layout_constraintTop_toTopOf="@+id/profile_label_subType"
        app:layout_constraintBottom_toBottomOf="@+id/profile_label_subType"
        tools:text="HIG" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_type"
        app:layout_constraintLeft_toLeftOf="@+id/profile_subType"
        app:layout_constraintTop_toTopOf="@+id/profile_label_type"
        app:layout_constraintBottom_toBottomOf="@+id/profile_label_type"
        tools:text="Home" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_email"
        app:layout_constraintLeft_toLeftOf="@+id/profile_type"
        app:layout_constraintTop_toTopOf="@+id/profile_label_email"
        app:layout_constraintBottom_toBottomOf="@+id/profile_label_email"
        tools:text="towaso@gmail.com" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_name"
        app:layout_constraintLeft_toLeftOf="@+id/profile_email"
        app:layout_constraintTop_toTopOf="@+id/profile_label_name"
        app:layout_constraintBottom_toBottomOf="@+id/profile_label_name"
        tools:text="ToWaSo" />
    <ImageView
        android:layout_width="0dp"
        android:layout_height="160dp"
        app:srcCompat="@drawable/icon_logo"
        android:id="@+id/profile_image_view"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name" />
</android.support.constraint.ConstraintLayout>
