<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.suliteos.towaso.user.ComplainFragment">

    <Spinner
        android:layout_height="48dp"
        android:id="@+id/complain_spinner"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|textMultiLine"
        android:ems="10"
        android:id="@+id/description_edit_text"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:maxLength="2000"
        android:minLines="5"
        android:scrollHorizontally="false"
        android:hint="@string/desc"
        app:layout_constraintHorizontal_bias="0.87"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/complain_type" />

    <Button
        android:text="@string/complain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/complain_btn"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/description_edit_text"
        android:layout_marginRight="16dp" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/complain_type"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/complain_spinner"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="0dp"
        android:hint="@string/complain_title"
        android:visibility="gone"/>

    <FrameLayout android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/complain_btn"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_complain"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/complain_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"/>
    </FrameLayout>

</android.support.constraint.ConstraintLayout>
